<resources>
    <string name="app_name">Mootty</string>
    <string name="userprofilebutton">UserProfileButton</string>
    <string name="password">Password</string>
    <string name="password_kor">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="email">Email</string>
    <string name="email_kor">이메일</string>
    <string name="btn_login">로그인</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_in_sns">다음 계정으로 시작하기</string>
    <string name="sign_up_email">이메일로 가입하기</string>
    <string name="btn_sign_up">회원가입</string>


    <string name="ex_main_text">화나는 일이 있었나요?\n화가 날 땐 이러저러~</string>
    <string name="ex_main_date">2020.08.07</string>
    <string name="ex_main_title">강하림님의 감정 일보</string>

</resources>
