<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.humo.mootty.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_two"
        android:orientation="vertical"
        tools:context=".ui.auth.LoginActivity"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loginLayout">

            <ImageView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="73dp"
                android:lineSpacingExtra="6sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_mootty_outline" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/app_title">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    app:mtf_image="@drawable/ic_email_black_24dp"
                    app:mtf_labelColor="#666">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:id="@+id/text_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.email}"
                        android:textColor="#333"
                        android:textSize="15sp" />

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    app:mtf_image="@drawable/ic_vpn_key_black_24dp"
                    app:mtf_labelColor="#666">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:id="@+id/edit_text_password"
                        android:text="@={viewmodel.password}"
                        android:textColor="#333"
                        android:textSize="15sp" />

                </com.github.florent37.materialtextfield.MaterialTextField>
            </LinearLayout>

            <com.marozzi.roundbutton.RoundButton
                android:id="@+id/button_sign_in"
                style="@style/TextStyle194"
                android:layout_width="88dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/btn_login"
                android:onClick="@{() -> viewmodel.login()}"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:rb_animation_alpha="true"
                app:rb_animation_corner_radius="20dp"
                app:rb_animation_duration="500"
                app:rb_animation_inner_resource_color="@color/green"
                app:rb_animation_progress_color="@color/colorAccent2"
                app:rb_animation_progress_padding="3dp"
                app:rb_animation_progress_width="2dp"
                app:rb_background_color="@color/warm_grey_three"
                app:rb_background_color_pressed="@color/white"
                app:rb_corner_color="@color/white"
                app:rb_corner_color_pressed="@color/white"
                app:rb_corner_radius="20dp"
                app:rb_corner_width="1dp"
                app:rb_text_color="@color/white"
                app:rb_text_color_pressed="@android:color/white" />

            <TextView
                android:id="@+id/tv_sign_in_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

            <Button
                android:id="@+id/btn_find_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:background="@android:color/transparent"
                android:text="@string/find_id"
                android:textColor="@color/brownish_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_status" />

            <Button
                android:id="@+id/btn_find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:background="@android:color/transparent"
                android:text="@string/find_password"
                android:textColor="@color/brownish_grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_status" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_in_sns"
                android:textColor="@color/brownish_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_find_password" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <ImageButton
                    android:id="@+id/btn_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_google" />

                <ImageButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_fb" />

                <ImageView
                    android:id="@+id/btn_kakao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_kakao" />

                <ImageView
                    android:id="@+id/btn_naver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_naver" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:text="@string/sign_up_email"
                android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
                android:textColor="@color/brownish_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>